# Veridion-nexus

./: .env.example  .gitignore  ARCHON_MCP_ARCHITECTURE_REVIEW.md  BUSINESS_VALUE_ASSESSMENT.md  CODE_PROTECTION_GUIDE.md  Cargo.toml  DEMO_GUIDE.md  DEPLOYMENT.md  DOCUMENTATION_CLEANUP_PROMPT.md  Dockerfile  Dockerfile.dashboard  Dockerfile.landing  LATENCY_INVESTIGATION_REPORT.md  LICENSE  PROJECT_REFERENCE.md  QUICK-FIX-VERCEL.md  README-VERCEL-DEPLOYMENT.md  REGULUS_LICENSE_REVIEW.md  REGULUS_PRIVACY_POLICY_REVIEW.md  REGULUS_SCC_AUDIT.md  REGULUS_SHADOW_MODE_CONTRACT.md  TODO_VERIFICATION_REPORT.md  VERIFY-AUTO-DEPLOYMENT.md  backup.sh  check-backend-status.sh  deploy.local.ps1.example  deploy.ps1  deploy.sh  docker-compose.prod.yml  env.proxy.example  force-update-login.sh  generate_hash.rs  restart-and-verify.sh  send-test-transfer-au.ps1  send-test-transfer-in.ps1  send-test-transfer-india-anthropic.js  send-test-transfer.html  send-test-transfers-almaco.py  test-agent-key.py  test-evaluate.py
configs/: enforcement_matrix.json
dashboard/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
docs/: AL - phase 0.md  AL_ROADMAP.md  CURSOR_INSTRUCTIONS.md  REGULATORY_SCOPE.md
mcp-server/: .gitignore  .npmignore  README.md  package-lock.json  package.json  (+4 more)
mcp-server-al/: README.md  package-lock.json  package.json
mcp-server-gateway/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
mcp-server-shield/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
(+135 files in other folders)
