[package]
name = "veridion-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "veridion_api"
path = "src/lib.rs"

[[bin]]
name = "veridion-api"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4", features = ["compress-gzip"] }
actix-cors = "0.7"
actix-web-httpauth = "0.8"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
rand = "0.8"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
futures-util = "0.3"

[profile.dev]
debug = false
incremental = false

[dev-dependencies]
actix-web = { version = "4", features = ["compress-gzip"] }
